sandbox/output
GildedRoseTest.java:104: error: cannot find symbol
            .filter(GildedRose.isAgedBrie())
                              ^
  symbol:   method isAgedBrie()
  location: class GildedRose
1 error
